    [*] Fixed "> working directory does not exist, process might fail to start" printing wrongly in
        some cases when using QtilitiesProcess.
    [*] Fixed FileUtils::findFilesUnderDir() matching against directories which are more than one level deep from the search dir.
    [*] Fixed Task::setLastErrorMessagesStackSize() not updating the stack size correctly.

    ============================
    QtilitiesCoreGui:
    ============================
    [+] ObserverWidget/TreeWidget now has a new refresh mode which makes refreshes much smoother than
        previously. The new mode will update the tree very smoothly when the backend tree structure
        changes. The old behaviour is still around to use if you prefer to use it. See ObseverWidget::RefreshMode for more details.
    [+] Added access functions to ObserverWidget to get hold of expanded objects and categories seperately. Internally
        ObserverWidget and ObserverTreeModel also uses objects and categories instead of the previously
        used list of names in order to more accurately restore the expansion state of your tree when
        a refresh occurs. Previously any tree that contained items with duplicate names would not have
        kept its expansion state properly after a refresh.
    [+] Added the ability to turn off automatic item selection and expansion state restoration when
        an ObserverWidget refreshes. See ObserverWidget::enableAutoSelectAndExpand() and
        ObserverWidget::disableAutoSelectAndExpand() for more details.
    [+] ObserverWidget got a new constructor which allows you to specify the initial selection and
        initial set of objects which needs to be expanded once the tree was initialized.
    [+] Added new generic property related classes: GenericPropertyBrowser, GenericPropertyPathEditor,
        GenericPropertyPathEditorListWrapper, FileEditorFactory and PathPropertyManager.
    [+] Added TaskSummaryWidget::getSingleTaskWidgetForTask().